# pcf8563-rs

./: Cargo.toml  Embed.toml  README.md
.cargo/: config
examples/: bluepill.rs  stm32f030.rs
src/: configuration.rs  datetime.rs  lib.rs
