[package]
name = "pcf8563"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[target.thumbv7m-none-eabi.dev-dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "0.9.0"

