[package]
name = "pcf8563"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
panic-rtt-target = { version =  "0.1.2", features = ["cortex-m"] }


[target.thumbv6m-none-eabi.dev-dependencies.stm32f0xx-hal]
features = ["stm32f030xc", "rt"]
version = "0.18"

[target.thumbv6m-none-eabi.dev-dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[lib]
name = "pcf8563"
test = false
bench = false
